--- a/CodeFactory/en.lproj/MainMenu.xib
+++ b/CodeFactory/en.lproj/MainMenu.xib
@@ -1306,7 +1306,7 @@
 				<nil key="NSUserInterfaceItemIdentifier"/>
 				<string key="NSWindowContentMinSize">{800, 600}</string>
 				<object class="NSView" key="NSWindowView" id="439893737">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">256</int>
 					<array class="NSMutableArray" key="NSSubviews">
 						<object class="NSCustomView" id="566765939">
@@ -1318,7 +1318,6 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{225, 563}, {558, 17}}</string>
 									<reference key="NSSuperview" ref="566765939"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="326834601"/>
 									<string key="NSReuseIdentifierKey">_NS:1535</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1360,7 +1359,6 @@
 									<array class="NSMutableArray" key="NSSubviews"/>
 									<string key="NSFrame">{{20, 61}, {200, 494}}</string>
 									<reference key="NSSuperview" ref="566765939"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="356786393"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
@@ -1371,7 +1369,6 @@
 									<int key="NSvFlags">268</int>
 									<string key="NSFrame">{{228, 61}, {552, 494}}</string>
 									<reference key="NSSuperview" ref="566765939"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="10108887"/>
 									<bool key="NSViewIsLayerTreeHost">YES</bool>
 									<object class="NSDictionary" key="NSViewAnimations">
@@ -1394,7 +1391,6 @@
 									<array class="NSMutableArray" key="NSSubviews"/>
 									<string key="NSFrame">{{622, 13}, {82, 32}}</string>
 									<reference key="NSSuperview" ref="566765939"/>
-									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="701773256"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
@@ -1420,8 +1416,6 @@
 									<array class="NSMutableArray" key="NSSubviews"/>
 									<string key="NSFrame">{{704, 13}, {82, 32}}</string>
 									<reference key="NSSuperview" ref="566765939"/>
-									<reference key="NSWindow"/>
-									<reference key="NSNextKeyView"/>
 									<string key="NSReuseIdentifierKey">_NS:9</string>
 									<bool key="NSEnabled">YES</bool>
 									<object class="NSButtonCell" key="NSCell" id="1062383231">
@@ -1444,15 +1438,12 @@
 							</array>
 							<string key="NSFrameSize">{800, 600}</string>
 							<reference key="NSSuperview" ref="439893737"/>
-							<reference key="NSWindow"/>
 							<reference key="NSNextKeyView" ref="789027689"/>
 							<string key="NSReuseIdentifierKey">_NS:9</string>
 							<string key="NSClassName">BackgroundView</string>
 						</object>
 					</array>
 					<string key="NSFrameSize">{800, 600}</string>
-					<reference key="NSSuperview"/>
-					<reference key="NSWindow"/>
 					<reference key="NSNextKeyView" ref="566765939"/>
 				</object>
 				<string key="NSScreenRect">{{0, 0}, {1920, 1058}}</string>
@@ -2184,14 +2175,6 @@
 				</object>
 				<object class="IBConnectionRecord">
 					<object class="IBOutletConnection" key="connection">
-						<string key="label">rightBox</string>
-						<reference key="source" ref="976324537"/>
-						<reference key="destination" ref="356786393"/>
-					</object>
-					<int key="connectionID">1232</int>
-				</object>
-				<object class="IBConnectionRecord">
-					<object class="IBOutletConnection" key="connection">
 						<string key="label">leftBox</string>
 						<reference key="source" ref="976324537"/>
 						<reference key="destination" ref="326834601"/>
@@ -2213,6 +2196,14 @@
 						<reference key="destination" ref="326834601"/>
 					</object>
 					<int key="connectionID">1264</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBOutletConnection" key="connection">
+						<string key="label">mainView</string>
+						<reference key="source" ref="976324537"/>
+						<reference key="destination" ref="356786393"/>
+					</object>
+					<int key="connectionID">1265</int>
 				</object>
 			</array>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -3950,7 +3941,7 @@
 			<nil key="activeLocalization"/>
 			<dictionary class="NSMutableDictionary" key="localizations"/>
 			<nil key="sourceID"/>
-			<int key="maxID">1264</int>
+			<int key="maxID">1265</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<array class="NSMutableArray" key="referencedPartialClassDescriptions">
